<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activitys.MainActivity">

        <ImageView
            android:id="@+id/fundoBranco"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            android:src="@android:drawable/screen_background_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/fundoCinza"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/shape" />

        <TextView
            android:id="@+id/bem_vindo_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:fontFamily="@font/exo_2_semibold"
            android:gravity="top"
            android:text="@string/bem_vindo_"
            android:textAppearance="@style/bem_vindo_"
            app:layout_constraintBottom_toTopOf="@+id/este_o"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/fundoCinza" />

        <TextView
            android:id="@+id/este_o"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal|top"
            android:text="@string/este_o"
            android:textAppearance="@style/este_o"
            app:layout_constraintBottom_toTopOf="@+id/imageView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bem_vindo_" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="TODO"
            app:layout_constraintBottom_toTopOf="@+id/desc_"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/este_o"
            app:srcCompat="@drawable/ic_logo" />

        <View
            android:id="@+id/desc_"
            android:layout_width="230.21dp"
            android:layout_height="141.67dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="#00000000"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <TextView
            android:id="@+id/o_que_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal|top"
            android:text="@string/o_que_"
            android:textAppearance="@style/o_que_"
            app:layout_constraintBottom_toTopOf="@+id/rpg_link_"
            app:layout_constraintEnd_toEndOf="@+id/desc_"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/desc_"
            app:layout_constraintTop_toTopOf="@+id/desc_"
            app:layout_constraintVertical_bias="0.15"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/rpg_link_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal|top"
            android:text="@string/rpg_link_"
            android:textAppearance="@style/rpg_link_"
            app:layout_constraintBottom_toTopOf="@+id/tudo_que_vo"
            app:layout_constraintEnd_toEndOf="@+id/desc_"
            app:layout_constraintStart_toStartOf="@+id/desc_"
            app:layout_constraintTop_toBottomOf="@+id/o_que_" />

        <TextView
            android:id="@+id/tudo_que_vo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal|top"
            android:text="@string/tudo_que_vo"
            android:textAppearance="@style/tudo_que_vo"
            app:layout_constraintBottom_toBottomOf="@+id/desc_"
            app:layout_constraintEnd_toEndOf="@+id/desc_"
            app:layout_constraintStart_toStartOf="@+id/desc_"
            app:layout_constraintTop_toBottomOf="@+id/rpg_link_" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9015048" />

        <TextView
            android:id="@+id/pular1Txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu"
            android:text="Pular"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fundoCinza" />

</androidx.constraintlayout.widget.ConstraintLayout>